--- a/enter/contact/index.html
+++ b/enter/contact/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Redirecting...</title>
-		<meta http-equiv="refresh" content="0;url=https://sonic1231.github.io/sonic-platforms/contact/">
+		<meta http-equiv="refresh" content="0;url=./contact/">
 	</head>
 	<body>
 		<script type="text/javascript">
-			window.location = "https://sonic1231.github.io/sonic-platforms/contact/";
+			window.location = "./contact/";
 		</script>
 
-		<p>You are being redirected to <a href="https://sonic1231.github.io/sonic-platforms/contact/">https://sonic1231.github.io/sonic-platforms/contact/</a></p>
+		<p>You are being redirected to <a href="./contact/">./contact/</a></p>
 	</body>
 </html>
