trying again to fix the logo href

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ jQuery('.vimplayer').click(function(event){
 </div><!-- #page -->
 
 <script>
-   jQuery('.site-branding.container a').attr('href','../enter/index.html');
+   jQuery('.site-branding.container a').attr('href','../../enter/index.html');
 </script>
 
 <script src="./wp-includes/js/froogaloop2.min.js"></script>
